init: docs site with scaffolding patched

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,17 @@
 import Bleed from 'nextra-theme-docs/bleed'
 
-# Nextra
+# 🐉 Artificus
 
-**Nextra** is a [Next.js](https://nextjs.org) based static site generator.
+**Artificus** is a D&D campaign and this is the docs site. Find information about the world, the characters, and the campaign itself.
 
-It supports Markdown and React components ([MDX](/features/mdx)), automatically generated [sidebar and anchor links](/get-started#sidebar-and-anchor-links), file-system based routing, built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
+<Bleed>![Nextra Example](../public/scenes/life-tree-2.png)</Bleed>
 
-Here's what you will get in 1 minute:
+ ## Roster
 
-<Bleed>![Nextra Example](../public/demo.png)</Bleed>
+ - DM: Dev 
+ - PC: Tim
+ - PC: Sam
+ - PC: Phil
+ - PC: Amanda
+
+
