add initial info to docs

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,7 +4,7 @@ import Bleed from 'nextra-theme-docs/bleed'
 
 **Artificus** is a D&D campaign and this is the docs site. Find information about the world, the characters, and the campaign itself.
 
-<Bleed>![Nextra Example](../public/scenes/life-tree-2.png)</Bleed>
+<Bleed>![Nextra Example](../public/scenes/life-tree-5.png)</Bleed>
 
  ## Roster
 
@@ -14,4 +14,7 @@ import Bleed from 'nextra-theme-docs/bleed'
  - PC: Phil
  - PC: Amanda
 
+## Sessions
+
+- **0** / 9.20.2022 7:00PM EST
 
