chore: clean up and add TS

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,11 @@
 import Bleed from 'nextra-theme-docs/bleed'
 
-# 🐉 Artificus
+# Artificus 🐉
 
-**Artificus** is a D&D campaign and this is the docs site. Find information about the world, the characters, and the campaign itself.
+**Artificus** is a D&D campaign and this is the docs site. Find information about the world, the characters, and the campaign itself here.
 
-<Bleed>![Nextra Example](../public/scenes/life-tree-5.png)</Bleed>
-
+<Bleed>![Nextra Example](/scenes/life-tree-5.png)</Bleed>
+ 
  ## Roster
 
  - DM: Dev 
