feat: caption images

--- a/pages/lore/characters.mdx
+++ b/pages/lore/characters.mdx
@@ -1,10 +1,12 @@
+import { Caption } from 'src/components';
+
 # Characters
 
 ## Earthlings
 
-Grand Magical Scholar Dimmitrius Alfonse
-
-![Dimmitrius Alfonse](/characters/dimmitrius-alfonse.png)
+<Caption caption="Grand Magical Scholar Dimmitrius Alfonse">
+  ![Dimmitrius Alfonse](/characters/dimmitrius-alfonse.png)
+</Caption>
 
 ## Faerun
 
