--- a/pages/lore/places/maps.mdx
+++ b/pages/lore/places/maps.mdx
@@ -1,4 +1,5 @@
-import Bleed from 'nextra-theme-docs/bleed'
+import Bleed from 'nextra-theme-docs/bleed';
+import { Caption } from 'src/components/';
 
 # Maps
 
@@ -10,13 +11,14 @@ import Bleed from 'nextra-theme-docs/bleed'
 
 What follows are artist renditions of portions of the World. They are drawn as glimpses of the eyes of various places, and as the World has changed much, should be taken with a grain of salt.
 
-----
+<Caption caption="The World, Galeus Monk, Year 0, Month 6">
+  <Bleed>![World Rendition](/scenes/world-rendition.png)</Bleed>
+</Caption>
 
-*The World, Galeus Monk, Year 0, Month 6*
-<Bleed>![World Rendition](/scenes/world-rendition.png)</Bleed>
+<Caption caption="World, Nicolas Arestrius in tutelage of Galeus Monk, Year 0, Month 7">
+  <Bleed>![World Rendition](/scenes/world-rendition-2.png)</Bleed>
+</Caption>
 
-*World, Nicolas Arestrius in tutelage of Galeus Monk, Year 0, Month 7*
-<Bleed>![World Rendition](/scenes/world-rendition-2.png)</Bleed>
-
-*World, Galeus Monk, Year 0, Month 9*
-<Bleed>![World Rendition](/scenes/world-rendition-3.png)</Bleed>
+<Caption caption="World, Galeus Monk, Year 0, Month 9">
+  <Bleed>![World Rendition](/scenes/world-rendition-3.png)</Bleed>
+</Caption>
