feat: bump to nextra 2.0.0-beta.25 and update config to match

--- a/pages/lore/places/maps.mdx
+++ b/pages/lore/places/maps.mdx
@@ -1,4 +1,3 @@
-import Bleed from 'nextra-theme-docs/bleed';
 import { Caption } from 'src/components/';
 
 # Maps
@@ -12,13 +11,13 @@ import { Caption } from 'src/components/';
 What follows are artist renditions of portions of the World. They are drawn as glimpses of the eyes of various places, and as the World has changed much, should be taken with a grain of salt.
 
 <Caption caption="The World, Galeus Monk, Year 0, Month 6">
-  <Bleed>![World Rendition](/scenes/world-rendition.png)</Bleed>
+  ![World Rendition](/scenes/world-rendition.png)
 </Caption>
 
 <Caption caption="World, Nicolas Arestrius in tutelage of Galeus Monk, Year 0, Month 7">
-  <Bleed>![World Rendition](/scenes/world-rendition-2.png)</Bleed>
+  ![World Rendition](/scenes/world-rendition-2.png)
 </Caption>
 
 <Caption caption="World, Galeus Monk, Year 0, Month 9">
-  <Bleed>![World Rendition](/scenes/world-rendition-3.png)</Bleed>
+  ![World Rendition](/scenes/world-rendition-3.png)
 </Caption>
