--- a/pages/lore/records/a-brief-timeline-of-very-recent-events-for-all.mdx
+++ b/pages/lore/records/a-brief-timeline-of-very-recent-events-for-all.mdx
@@ -1,13 +1,10 @@
-import Bleed from 'nextra-theme-docs/bleed';
-import Callout from 'nextra-theme-docs/callout';
+import { Callout } from 'nextra-theme-docs';
 import { Caption } from '../../../src/components';
 
 # A Brief Timeline of Very Recent Events For All
 
 <Caption caption="The fall of France, Silverymoon">
-  <Bleed full>
-    ![End of France and Silverymoon](/scenes/france-silverymoon-end-oil.png)
-  </Bleed>
+  ![End of France and Silverymoon](/scenes/france-silverymoon-end-oil.png)
 </Caption>
 
 > _Written by Earth's Grand Magical Scholar Dimmitrius Alfonse, magically published in partnership with Haste Publications, The World Media Guild, and Silverymoon's Department of Extraplanar Affairs_
