--- a/pages/lore/records/collection-of-poems-on-magic.mdx
+++ b/pages/lore/records/collection-of-poems-on-magic.mdx
@@ -1,6 +1,4 @@
-import Bleed from 'nextra-theme-docs/bleed';
-
-<Bleed full>![magic](/scenes/magic.png)</Bleed>
+![magic](/scenes/magic.png)
 
 ## Enil Magicus
 
