--- a/pages/lore/records/structure-and-society-primitive-worlds.mdx
+++ b/pages/lore/records/structure-and-society-primitive-worlds.mdx
@@ -1,4 +1,3 @@
-import Bleed from 'nextra-theme-docs/bleed';
 import { Caption } from 'src/components';
 
 # Structure and Society of Primitive Worlds
@@ -6,7 +5,7 @@ import { Caption } from 'src/components';
 _An excerpt from Chapter 7, "Religion"_
 
 <Caption caption="Unknown artist rendition of Earth's Angels">
-  <Bleed full>![Angels](/scenes/earth-angels-rendition.png)</Bleed>
+  ![Angels](/scenes/earth-angels-rendition.png)
 </Caption>
 
 ## Earth
