--- a/pages/lore/the-world.mdx
+++ b/pages/lore/the-world.mdx
@@ -1,8 +1,6 @@
-import Bleed from 'nextra-theme-docs/bleed'
-
 # The World
 
-<Bleed full>![Fog Portal](/scenes/fog-portal.png)</Bleed>
+![Fog Portal](/scenes/fog-portal.png)
 
 ## Core Assumptions
 
