--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,20 +1,18 @@
-import Bleed from 'nextra-theme-docs/bleed'
+import { Bleed } from 'nextra-theme-docs';
 
 # Artificus 🐉
 
 **Artificus** is a D&D campaign and this is the docs site. Find information about the world, the characters, and the campaign itself here.
 
 <Bleed>![Nextra Example](/scenes/life-tree-5.png)</Bleed>
- 
- ## Roster
+## Roster
 
- - DM: Dev 
- - PC: Tim
- - PC: Sam
- - PC: Phil
- - PC: Amanda
+- DM: Dev
+- PC: Tim
+- PC: Sam
+- PC: Phil
+- PC: Amanda
 
 ## Sessions
 
 - **0** / 9.18.2022 7:00PM EST
-
