feat: update homepage to include session 1 date and new PC

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,7 +12,9 @@ import { Bleed } from 'nextra-theme-docs';
 - PC: Sam
 - PC: Phil
 - PC: Amanda
+- PC: Meg
 
 ## Sessions
 
 - **0** / 9.18.2022 7:00PM EST
+- **1** / 11.15.2022 8:00PM EST
