fix: update characters page w better descriptions

--- a/pages/lore/characters.mdx
+++ b/pages/lore/characters.mdx
@@ -4,13 +4,19 @@ import { Caption } from 'src/components';
 
 ## Earthlings
 
+### Dimmitrius Alfonse
+
+Grand Magical Scholar
+
 <Caption caption="Grand Magical Scholar Dimmitrius Alfonse">
   ![Dimmitrius Alfonse](/characters/dimmitrius-alfonse.png)
 </Caption>
 
 ## Faerun
 
-### En Nirilith, Queen of New Silverymoon, Vessel of Mana
+### En Nirilith
+
+Queen of New Silverymoon, Vessel of Mana
 
 En Nirilith, descendent of En Noreldiae, is the ruling monarch of New Silverymoon. Though she claims the throne, she is a figurehead and not a political actor. However, she does sit on the Free Council as an advisor. She is also known as The Vessel, or the _Vessel of Mana_, and channels the will of Mana, Goddess of Magic. As such she was the most powerful mage in all of Faerun and commands the Enblade, a magical, sentient sword that is the physical manifestation of her power.
 
