feat: map of evergreen mile

--- a/pages/lore/places/maps.mdx
+++ b/pages/lore/places/maps.mdx
@@ -5,6 +5,7 @@ import { Caption } from 'src/components/';
 ## Table of contents
 
 - [Renditions of the World](#renditions-of-the-world)
+- [Evergreen Mile](#evergreen-mile)
 
 ## Renditions of the World
 
@@ -20,4 +21,12 @@ What follows are artist renditions of portions of the World. They are drawn as g
 
 <Caption caption="World, Galeus Monk, Year 0, Month 9">
   ![World Rendition](/scenes/world-rendition-3.png)
+</Caption>
+
+## Evergreen Mile
+
+An incomplete charter of the Mile
+
+<Caption caption="Evergreen Mile, compilations from scouts">
+  ![Evergreen Mile](/places/map-evergreen-mile.jpeg)
 </Caption>
