feat: update pantheon

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,11 +8,11 @@ import { Bleed } from 'nextra-theme-docs';
 ## Roster
 
 - DM: Dev
-- PC: Tim
-- PC: Sam
-- PC: Phil
+- PC: Phylondish Brull
+- PC: Blight
+- PC: Elín Gunnarsdóttir
 - PC: Amanda
-- PC: Meg
+- PC: Byrde
 
 ## Sessions
 
