--- a/pages/lore/the-world.mdx
+++ b/pages/lore/the-world.mdx
@@ -12,8 +12,16 @@
 
 ## Pantheon
 
-Earth: Godless
+### Earth
 
-## Higher Magics
+Godless
 
-TBD
+### Faerun
+
+Old and New Gods
+
+- Mystra, Mother of all Magic, Goddess of Magic
+
+### Mirth
+
+Unknown
