fix: typo in lore

--- a/pages/lore/records/a-brief-timeline-of-very-recent-events-for-all.mdx
+++ b/pages/lore/records/a-brief-timeline-of-very-recent-events-for-all.mdx
@@ -57,7 +57,7 @@ A capitol city, New Silverymoon, emerged on the intersection of a three-way faul
 
 Even still, attacks are frequent.
 
-The Guild, a coalition of representatives, leaders, and/or powerful beings representing budding nations or former ones was formed to help orchestrate friendly communications and alliances between intelligent creatures seeking safety. Currently, it is an official alliance between four factions, loosely representing Earth (North America, South America, Europe), Toril (Faerun), and Mirth (Lith)<sup>7</sup>. Though the alliance is official, it has little to no governing power, and lawlessness still prevails.
+The Guild, a coalition of representatives, leaders, and/or powerful beings representing budding nations or former ones was formed to help orchestrate friendly communications and alliances between intelligent creatures seeking safety. Currently, it is an official alliance between three factions, loosely representing Earth (North America, South America, Europe), Toril (Faerun), and Mirth (Lith)<sup>7</sup>. Though the alliance is official, it has little to no governing power, and lawlessness still prevails.
 
 **Two Weeks Ago**
 
