--- a/pages/lore/records/collected-histories-of-primitive-worlds.mdx
+++ b/pages/lore/records/collected-histories-of-primitive-worlds.mdx
@@ -4,7 +4,7 @@ import { Caption } from 'src/components';
 
 _collected and translated by Celeleath for public archival, New Silverymoon Central Library_
 
-What follows is an abridged account of the events that transpired on Earth following the discovery of magic (2000 -- Gregorian) up until Convergence (2038, February -- Gregorian)
+What follows is an abridged account of the events that transpired on Earth following the discovery of mana (2000 -- Gregorian) up until Convergence (2038, February -- Gregorian)
 
 <Caption caption="Old New York City, artist rendition 2029">
   ![](/scenes/old-nyc-2.png)
@@ -14,21 +14,21 @@ _2000_
 
 Ancient Angel civilization discovered beneath the region of _Iceland_. Additional, less impactful excavations also made in the regions of _The United States_ and _Turkey_, though the validity of those findings are contested by human historians.
 
-Explorations into the Iceland ruins revealed origins of Earth's magic, as well as the tragic fate of their gods.
+Explorations into the Iceland ruins revealed origins of Earth's mana, as well as the tragic fate of their gods.
 
-Along with the records and artifacts recovered in the Angel discoveries, luminous gems were found with concentrated magic. Humans studied these and found the energy in them could be harvested and used as a source of energy akin to their existing primitive energy sources, crude oils and the like. However, their initial harvesting processes and understanding of magic was elementary at best. They used violent techniques for extracting the energy which only pulled a small fraction out, estimated around 8% on average. This was still enough to power their largest cities for a year. The energy they couldn't contain dispersed into the atmosphere, effectively redistributing the magic throughout the world to be absorbed by sources<sup>1</sup>. Unfortunately, at the time this was unknown to them, and was a marked difference between magic, which we all know some will of its own, and crude energy. Additionally, it was not until the records were translated later that year that these magic gems were correctly characterized as condensed magic.
+Along with the records and artifacts recovered in the Angel discoveries, luminous gems were found with concentrated mana. Humans studied these and found the energy in them could be harvested and used as a source of energy akin to their existing primitive energy sources, crude oils and the like. However, their initial harvesting processes and understanding of magic was elementary at best. They used violent techniques for extracting the energy which only pulled a small fraction out, estimated around 8% on average. This was still enough to power their largest cities for a year. The energy they couldn't contain dispersed into the atmosphere, effectively redistributing the mana throughout the world to be absorbed by sources<sup>1</sup>. Unfortunately, this was unknown to them at the time, and was a marked difference between mana, which has a will of its own, and crude energy. Additionally, it was not until the records were translated later that year that these magic gems were correctly characterized as condensed mana.
 
 _January 2001_
 
-The discovery that the gems could be used to power entire cities shook nations. A Cold World War (the third of its kind) broke out over disagreements on ownership of these gems and the vast mines which were being uncovered throughout parts of Iceland.
+The discovery that the gems could be used to power entire cities shook nations. A Cold World War broke out over disagreements on ownership of these gems and the vast mines which were being uncovered throughout parts of Iceland.
 
 At the same time, researchers at the University of Iceland in collaboration with the newly formed International Magical Analytics NATO Association (IMANA) continued to test extraction techniques in partnership with leading energy companies throughout the world.
 
-Their ignorant greed to harvest magic in turn escalated the spread of it throughout the world.
+Their ignorant greed to harvest mana in turn escalated the spread of it throughout the world.
 
 _Summer 2001_
 
-Reports of magical "accidents" throughout Europe and Asia increase dramatically as regular humans and animals exposed to the high volume of magic in the air began to undergo changes. Notable sources begin to emerge, not all of which were human. Public opinion is split on these sources. Some were seen as heroes, praised for heroic deeds. Others naturally fell into a more villainous path or succumbed to magical decay, unable to cope. They were all considered mutants.
+Reports of magical "accidents" throughout Europe and Asia increased dramatically as regular humans and animals exposed to the high volume of mana in the air began to undergo changes. Notable sources begin to emerge, not all of which were human. Public opinion is split on these sources. Some were seen as heroes, praised for heroic deeds. Others naturally fell into a more villainous path or succumbed to magical decay, unable to cope. They were all considered mutants.
 
 Worldwide tensions continued to escalate.
 
@@ -52,7 +52,7 @@ Though the war ended by agreement, our historians conclude that the United State
 
 _2011-2032_
 
-Earth technology and understanding of magic evolves rapidly. An era of improved health and prosperity as nations enter an arms race for magical innovation. Equipped with magic, Earth colonizes their Moon and Mars.
+Earth technology and understanding of mana evolves rapidly. An era of improved health and prosperity as nations enter an arms race for magical innovation. Equipped with mana, Earth colonizes their Moon and Mars.
 
 _2035_
 
