--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -11,10 +11,11 @@ import { Bleed } from 'nextra-theme-docs';
 - PC: Phylondish Brull
 - PC: Blight
 - PC: Elín Gunnarsdóttir
-- PC: Amanda
+- PC: Taxidermy
 - PC: Byrde
 
 ## Sessions
 
-- **0** / 9.18.2022 7:00PM EST
+- **2** / 11.30.2022 7:30PM EST
 - **1** / 11.15.2022 8:00PM EST
+- **0** / 9.18.2022 7:00PM EST
