feat: legion of death

--- a/pages/characters/legion-of-death.mdx
+++ b/pages/characters/legion-of-death.mdx
@@ -21,4 +21,4 @@ Informs the party of the existence of the death curse and an artifact that can b
 
 ## Ligzar, First Seat of the Legion | *faerun, goblin*
 
-WIP
+A charismatic goblin who holds the highest unofficially recognized seat possible in the legion, "First Seat". Despite his unassming size and demeanor, he was a respected member of the Legion, and it's said Jergal was often caught chatting with Ligzar before the convergence. The key to this bond may be due to Ligzar's impressive memory and attention to detail, which he uses to keep track of the Legion's many secrets, all of which he keeps in a massive, magically bound journal. He is a skilled tracker and is able to find the party's trail with ease. 
