feat: add imagery and explanation to Yergal

--- a/pages/characters/legion-of-death.mdx
+++ b/pages/characters/legion-of-death.mdx
@@ -4,6 +4,18 @@
 
 ## Jergal, God of Death | *faerun, deity*
 
+![](https://cdn.discordapp.com/attachments/1018201519100792943/1099844136108032060/Devlathar_ominous_dark_oil_painting_of_Jergal_God_of_Death_a_ho_8aabdfd5-4745-4b03-ad14-6f615d58321a.png)
+
+When people hear "God of Death", they often focus too much on the "Death" part. The role calls for *equal* attention to the living, and Jergal was a master of both. For thousands of years he served as the defacto overseer of the afterlife, and was the only major deity who could grant the boon of **eternal life**. 
+
+**Campaign Notes**
+
+Jergal is reported to have died recently, targeted by an unknown assailant. His death is part of a larger string of godly deaths since the Convergence, prompting questions around the safety of the gods. 
+
+With his death, the "death curse" is now unsupervised. The curse is actually not a curse at all, but rather a fundamental force of nature present in most worlds. Jergal's predecessor, in a rare moment of accidental genius, nicknamed the force "death curse" as a joke and the name stuck. This created a sense of fear around the force, ultimately shrouding it in mystery from those that might have otherwise discovered its true nature. 
+
+It is the force of time and entropy, and is an explanatory force behind the natural coming of life and death. Another way to think of it: if gravity is the force that binds us on the physical ground, then the death curse is the force that binds us to the spiritual ground, rendering us alive or dead.
+
 ## Yrgret, Mirthian Folk Hero and Diplomat | *mirthian, humanoid*
 
 **Campaign Notes**
@@ -22,3 +34,7 @@ Informs the party of the existence of the death curse and an artifact that can b
 ## Ligzar, First Seat of the Legion | *faerun, goblin*
 
 A charismatic goblin who holds the highest unofficially recognized seat possible in the legion, "First Seat". Despite his unassming size and demeanor, he was a respected member of the Legion, and it's said Jergal was often caught chatting with Ligzar before the convergence. The key to this bond may be due to Ligzar's impressive memory and attention to detail, which he uses to keep track of the Legion's many secrets, all of which he keeps in a massive, magically bound journal. He is a skilled tracker and is able to find the party's trail with ease. 
+
+**Campaign Notes**
+
+The party encountered Ligzar deep in the mist pass between Old and New Pinemont. He beckoned to them with his song, after marking Decimus with Mark of Death (a scratchy cross usually seen on the hand or shoulder of members of the Legion). Ligzar led the party through the thick mists to the hidden castle, headquarters of the Legion.
