feat: upgrade to latest nextra and use experimental rust compiler

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,10 +1,8 @@
-import { Bleed } from 'nextra-theme-docs';
-
 # Artificus 🐉
 
 **Artificus** is a D&D campaign and this is the docs site. Find information about the world, the characters, and the campaign itself here.
 
-<Bleed>![Nextra Example](/scenes/life-tree-5.png)</Bleed>
+![Nextra Example](/scenes/life-tree-5.png)
 ## Roster
 
 - DM: Dev
@@ -16,6 +14,7 @@ import { Bleed } from 'nextra-theme-docs';
 
 ## Sessions
 
+- **3** / 4.23.2023 7:30PM EST
 - **2** / 11.30.2022 7:30PM EST
 - **1** / 11.15.2022 8:00PM EST
 - **0** / 9.18.2022 7:00PM EST
