--- a/src/pages/lore/records/a-brief-timeline-of-very-recent-events-for-all.mdx
+++ b/src/pages/lore/records/a-brief-timeline-of-very-recent-events-for-all.mdx
@@ -1,5 +1,5 @@
 import { Callout } from 'nextra-theme-docs';
-import { Caption } from '../../../src/components';
+import { Caption } from 'src/components';
 
 # A Brief Timeline of Very Recent Events For All
 
