feat: update journal session 3 and legion of death

--- a/src/pages/characters/legion-of-death.mdx
+++ b/src/pages/characters/legion-of-death.mdx
@@ -1,39 +1,40 @@
 # The Legion of Death
 
-> The common name for Jergal, late god of death, and his acolytes 
+> The common name for Jergal, late god of death, and his acolytes
 
-## Jergal, God of Death | *faerun, deity*
+## Jergal, God of Death | _faerun, deity_
 
 ![](https://cdn.discordapp.com/attachments/1018201519100792943/1099844136108032060/Devlathar_ominous_dark_oil_painting_of_Jergal_God_of_Death_a_ho_8aabdfd5-4745-4b03-ad14-6f615d58321a.png)
 
-When people hear "God of Death", they often focus too much on the "Death" part. The role calls for *equal* attention to the living, and Jergal was a master of both. For thousands of years he served as the defacto overseer of the afterlife, and was the only major deity who could grant the boon of **eternal life**. 
+When people hear "God of Death", they often focus too much on the "Death" part. The role calls for _equal_ attention to the living, and Jergal was a master of both. For thousands of years he served as the defacto overseer of the afterlife, and was the only major deity who could grant the boon of **eternal life**.
 
 **Campaign Notes**
 
-Jergal is reported to have died recently, targeted by an unknown assailant. His death is part of a larger string of godly deaths since the Convergence, prompting questions around the safety of the gods. 
+Jergal is reported to have died recently, targeted by an unknown assailant. His death is part of a larger string of godly deaths since the Convergence, prompting questions around the safety of the gods.
 
-With his death, the "death curse" is now unsupervised. The curse is actually not a curse at all, but rather a fundamental force of nature present in most worlds. Jergal's predecessor, in a rare moment of accidental genius, nicknamed the force "death curse" as a joke and the name stuck. This created a sense of fear around the force, ultimately shrouding it in mystery from those that might have otherwise discovered its true nature. 
+With his death, the "death curse" is now unsupervised. The curse is actually not a curse at all, but rather a fundamental force of nature present in most worlds. Jergal's predecessor, in a rare moment of accidental genius, nicknamed the force "death curse" as a joke and the name stuck. This created a sense of fear around the force, ultimately shrouding it in mystery from those that might have otherwise discovered its true nature.
 
 It is the force of time and entropy, and is an explanatory force behind the natural coming of life and death. Another way to think of it: if gravity is the force that binds us on the physical ground, then the death curse is the force that binds us to the spiritual ground, rendering us alive or dead.
 
-## Yrgret, Mirthian Folk Hero and Diplomat | *mirthian, humanoid*
+## Yrgret, Mirthian Folk Hero and Diplomat | _mirthian, humanoid_
 
 **Campaign Notes**
 
 During a chance encounter in The Singularity Tavern, tipped the party off to the location of Syndra Silvane
 
-
-## Syndra Silvane, High-Acolyte | *faerun, humanoid*
+## Syndra Silvane, High-Acolyte | _faerun, humanoid_
 
 Right-hand and late caretaker of Jergal. Living out the end of her days in Jergal's "temple", actually a small shack on the outskirts of Old Pinemont's Ruins. She refuses to speak on her past, but clearly had a strong bond with Jergal. She is an ordinary human and has been ressurrected multiple times by Jergal, and describes herself as beginning to wither, indicating that the Soulcatcher has been found and the ritual to control the death curse has begun. She estimates it began 7 days prior to meeting, which gives the party only 13 days to find the Soulcatcher and stop the ritual.
 
 **Campaign Notes**
 
-Informs the party of the existence of the death curse and an artifact that can be used to control it, the *Soulcatcher*. Encourages the party to seek out the less savory members of the Legion of Death, who may be able to help them in their quest.
+Informs the party of the existence of the death curse and an artifact that can be used to control it, the _Soulcatcher_. Encourages the party to seek out the less savory members of the Legion of Death, who may be able to help them in their quest.
 
-## Ligzar, First Seat of the Legion | *faerun, goblin*
+## Ligzar, First Seat of the Legion | _faerun, goblin_
 
-A charismatic goblin who holds the highest unofficially recognized seat possible in the legion, "First Seat". Despite his unassming size and demeanor, he was a respected member of the Legion, and it's said Jergal was often caught chatting with Ligzar before the convergence. The key to this bond may be due to Ligzar's impressive memory and attention to detail, which he uses to keep track of the Legion's many secrets, all of which he keeps in a massive, magically bound journal. He is a skilled tracker and is able to find the party's trail with ease. 
+![](https://cdn.discordapp.com/attachments/1018201519100792943/1099887364622528572/Devlathar_Charismatic_young_goblin_wearing_a_slightly_oversized_faaa10b1-ff83-428b-9d51-ec12ed7cd2b4.png)
+
+A charismatic goblin who holds the highest unofficially recognized seat possible in the legion, "First Seat". Despite his unassming size and demeanor, he was a respected member of the Legion, and it's said Jergal was often caught chatting with Ligzar before the convergence. The key to this bond may be due to Ligzar's impressive memory and attention to detail, which he uses to keep track of the Legion's many secrets, all of which he keeps in a massive, magically bound journal. He is a skilled tracker and is able to find the party's trail with ease.
 
 **Campaign Notes**
 
