--- a/src/pages/characters/legion-of-death.mdx
+++ b/src/pages/characters/legion-of-death.mdx
@@ -30,7 +30,7 @@ Right-hand and late caretaker of Jergal. Living out the end of her days in Jerga
 
 Informs the party of the existence of the death curse and an artifact that can be used to control it, the _Soulcatcher_. Encourages the party to seek out the less savory members of the Legion of Death, who may be able to help them in their quest.
 
-## Ligzar, First Seat of the Legion | _faerun, goblin_
+## Ligzar, First Seat of the Legion | _faerun, half-goblin_
 
 ![](https://cdn.discordapp.com/attachments/1018201519100792943/1099887364622528572/Devlathar_Charismatic_young_goblin_wearing_a_slightly_oversized_faaa10b1-ff83-428b-9d51-ec12ed7cd2b4.png)
 
