feat: init tailwind and begin recap

--- a/src/pages/characters/legion-of-death.mdx
+++ b/src/pages/characters/legion-of-death.mdx
@@ -2,7 +2,8 @@
 
 > The common name for Jergal, late god of death, and his acolytes
 
-## Jergal, God of Death | _faerun, deity_
+## Jergal, God of Death 
+<small>_faerun, deity_</small>
 
 ![](https://cdn.discordapp.com/attachments/1018201519100792943/1099844136108032060/Devlathar_ominous_dark_oil_painting_of_Jergal_God_of_Death_a_ho_8aabdfd5-4745-4b03-ad14-6f615d58321a.png)
 
@@ -16,7 +17,8 @@ With his death, the "death curse" is now unsupervised. The curse is actually not
 
 It is the force of time and entropy, and is an explanatory force behind the natural coming of life and death. Another way to think of it: if gravity is the force that binds us on the physical ground, then the death curse is the force that binds us to the spiritual ground, rendering us alive or dead.
 
-## Yrgret, Mirthian Folk Hero and Diplomat | _mirthian, humanoid_
+## Yrgret, Mirthian Folk Hero and Diplomat
+<small>_mirthian, humanoid_</small>
 
 ![](https://cdn.discordapp.com/attachments/1018201519100792943/1100022454828675072/Devlathar_Yrgret_a_humanoid_with_scales_that_blend_into_her_ski_a4d35338-5ad6-41bf-ad34-a4e6b6859f2f.png)
 
@@ -24,7 +26,8 @@ It is the force of time and entropy, and is an explanatory force behind the natu
 
 During a chance encounter in The Singularity Tavern, tipped the party off to the location of Syndra Silvane
 
-## Syndra Silvane, High-Acolyte | _faerun, humanoid_
+## Syndra Silvane, High-Acolyte
+<small>_faerun, humanoid_</small>
 
 ![](https://cdn.discordapp.com/attachments/1018201519100792943/1100022957985759313/Devlathar_Syndra_an_elderly_woman_who_looks_as_though_she_was_o_d8311b0f-0916-4f16-be6c-0ddde40399f4.png)
 
@@ -34,7 +37,8 @@ Right-hand and late caretaker of Jergal. Living out the end of her days in Jerga
 
 Informs the party of the existence of the death curse and an artifact that can be used to control it, the _Soulcatcher_. Encourages the party to seek out the less savory members of the Legion of Death, who may be able to help them in their quest.
 
-## Ligzar, First Seat of the Legion | _faerun, half-goblin_
+## Ligzar, First Seat of the Legion
+<small>_faerun, half-goblin_</small>
 
 ![](https://cdn.discordapp.com/attachments/1018201519100792943/1099887364622528572/Devlathar_Charismatic_young_goblin_wearing_a_slightly_oversized_faaa10b1-ff83-428b-9d51-ec12ed7cd2b4.png)
 
