--- a/src/pages/journal/session-3.mdx
+++ b/src/pages/journal/session-3.mdx
@@ -1,3 +1,7 @@
 # Session 3 Recap
 
-WIP
+Prior major events:
+1. The party arrived at Pinemont where they met a curious fellow named Gesture (pronounced *Guessture*)
+2. The party attended The Singularity Tavern, where they met a few interesting barkeepers and learned of Queen En Nirlith's plan to explore. 
+3. The party also received information about the "death curse" unraveling. They were tipped off as to where to learn more by the mysterious [Yrgret](/characters/legion-of-death#yrgret-mirthian-folk-hero-and-diplomat). 
+4. A skirmish of Pteradons broke out outside the Pinemont town gates. The party was able to fend them off. <span className="text-red-800">A pteradon beheaded the refugee father in front of his two kids and wife.</span>
