--- a/src/pages/lore/characters.mdx
+++ b/src/pages/lore/characters.mdx
@@ -1,6 +1,8 @@
 import { Caption } from 'src/components';
 
-# Characters
+# Lore Characters
+
+Characters the party has not met, but knows from lore.
 
 ## Earthlings
 
