--- a/src/pages/lore/the-world.mdx
+++ b/src/pages/lore/the-world.mdx
@@ -18,9 +18,10 @@ Godless
 
 ### Faerun
 
-Old and New Gods
+Old and New Gods, including but not limited to...
 
 - Mystra, Mother of all Magic, Goddess of Magic
+- Jergal, God of Death (dead)
 
 ### Mirth
 
