--- a/src/pages/journal/session-3.mdx
+++ b/src/pages/journal/session-3.mdx
@@ -1,7 +1,25 @@
 # Session 3 Recap
 
-Prior major events:
+Prior events:
+
 1. The party arrived at Pinemont where they met a curious fellow named Gesture (pronounced *Guessture*)
 2. The party attended The Singularity Tavern, where they met a few interesting barkeepers and learned of Queen En Nirlith's plan to explore. 
-3. The party also received information about the "death curse" unraveling. They were tipped off as to where to learn more by the mysterious [Yrgret](/characters/legion-of-death#yrgret-mirthian-folk-hero-and-diplomat). 
-4. A skirmish of Pteradons broke out outside the Pinemont town gates. The party was able to fend them off. <span className="text-red-800">A pteradon beheaded the refugee father in front of his two kids and wife.</span>
+3. The party also received information about the "death curse" unraveling. They were tipped by the mysterious [Yrgret](/characters/legion-of-death#yrgret-mirthian-folk-hero-and-diplomat), informed that they should seek out [Syndra Silvane](/characters/legion-of-death#syndra-silvane-high-acolyte). 
+4. A skirmish of Pteradons, guards, and refugees broke out outside the Pinemont town gates. The party was able to fend them off. <span className="text-red-500 font-semibold">A pteradon beheaded the refugee father from the intro in front of his two kids and wife.</span>
+5. The party rest in a respectable inn, The Closed Doors for the night. 
+6. The following morning, Byrde stole a painting from the wall. She was caught, most embarrassingly with her shoe stuck in the wall, but managed to talk her way out of reprocussions. The party got information from a couple on how to get to the coordinates provided by Yrgret. 
+7. Following those instructions, they passed through the mist passage and found the sketchy-looking skyrail system of Old Pinemont. 
+8. They rode the rails, eventually departing at the coordinates, where they found a pathway to a hermit shack.
+9. The hermit shack turned out to be Jergal, the recently killed Death God's, "temple". Syndra Silvane was there, and she explained that she would soon pass due to the death curse unraveling. She asked the party to find the Soulcatcher and destroy it. She indicated that the "death mark" on Decimus' hands which he received in the mist pass earlier was a sign that the party was chosen by the Legion of Death to do this.
+
+---
+
+Following the instructions, the party made their way back to the mist pass where they encountered [Ligzar](/characters/legion-of-death#ligzar-first-seat-of-the-legion). Ligzar serenaded them with his song, leading them further into the mists. The density of the mists made it impossible to traverse without the mysterious guidance of the half-goblin. He cheered them along, and seemed altogether gleeful to find them. 
+
+He led them to a hidden doorway deep in the mists, revealing an enormous hidden castle, prompting surprise from the party--how did this enormous castle hide in Old Pinemont right beneath everyone's noses? Anyway... 
+
+Inside the castle the party was met by Ligzar and 6 other goblin companions, as well as a 9 foot tall skeletal goblin figure that they referred to as "King". King was clearly dead and only interested in speaking in guttural nonsense. Despite the lacking of royal nomenclature, Ligzar appeared to be in charge. 
+
+Ligzar, after searching through his "prophetic codex", a journal that describes in detail what to do in the event of Jergal's death, informs the party that their coming signifies that the death curse is in danger of misuse. The ritual to control the curse takes 20 days, and given their arrival time and Syndra's worsening condition he estimates they have 13 days to find the Soulcatcher and end the ritual. 
+
+He is surprised by the fact that the party doesn't seem to know this or have any idea what they're doing. He gently assumes that the codex cannot possibly be wrong, and ushers the party to find their way to accommodations in the castle and prepare immediately to depart. He did not indicate what "departing" meant, assuming again that they should know what to do. He encouraged the party to take whatever they need from the castle as well.
