fix: drop quotes on character: king

--- a/src/pages/characters/legion-of-death.mdx
+++ b/src/pages/characters/legion-of-death.mdx
@@ -48,7 +48,7 @@ A charismatic goblin who holds the highest unofficially recognized seat possible
 
 The party encountered Ligzar deep in the mist pass between Old and New Pinemont. He beckoned to them with his song, after marking Decimus with Mark of Death (a scratchy cross usually seen on the hand or shoulder of members of the Legion). Ligzar led the party through the thick mists to the hidden castle, headquarters of the Legion.
 
-## "King"
+## King
 <small>faerun, unknown</small>
 
 ![](https://cdn.discordapp.com/attachments/1018201519100792943/1100056488048853063/Devlathar_part_skeleton_part_goblin_part_giant_standing_over_a__04c3bf46-e757-41e7-8fab-a5650387e193.png)
