feat: pinemont exposition

--- a/src/pages/lore/places/pinemont/pinemont.mdx
+++ b/src/pages/lore/places/pinemont/pinemont.mdx
@@ -1,8 +1,14 @@
 # Pinemont
 
-Built deep into the jungles of the Evergreen Mile, Pinemont is home to all sorts of adventurers, refugees, and otherfolk. It's a place where you can find a warm meal, a warm bed, and a warm welcome. It is the most populous safe haven in the area, save for the capitol city New Silverymoon far to the north. It is also home to a Singularity Tavern, dubbed "Monty's" by the locals. 
+Built deep into the jungles of the Evergreen Mile, Pinemont is home to all sorts of adventurers, refugees, and otherfolk. It's a place where you can find a warm meal, a warm bed, and a warm welcome. It is the most populous safe haven in the area, save for the capitol city New Silverymoon far to the north. It is also home to a Singularity Tavern, dubbed "Monty's" by the locals.
 
-It's unclear what world Pinemont comes from, and none of the locals seem to know--they all claim to have arrived after the Convergence. This makes the existence of "Old Pinemont" particularly strange, as it appears to be the overgrown ruins of an ancient and powerful city, now completely abandoned save the railers, a colloqial term referring to those crazy enough to live on the skyrail system that still functions in the area. 
+It's unclear what world Pinemont comes from, and none of the locals seem to know--they all claim to have arrived after the Convergence. This makes the existence of "Old Pinemont" particularly strange, as it appears to be the overgrown ruins of an ancient and powerful city, now completely abandoned save the railers, a colloqial term referring to those crazy enough to live on the skyrail system that still functions in the area.
+
+> Pinemont lay cradled within the dense jungles and winding rivers of the Evergreen Mile, its timeworn structures entwined with the lush vegetation, giving the city a sense of being one with the wilds. The air here was thick with humidity and the scent of damp earth and verdant foliage, making each breath a visceral reminder of the overwhelming presence of nature.
+
+> The city's architecture was an eclectic blend of ancient stone and newer wooden structures, their surfaces adorned with intricate carvings and mosaics that told the tales of the people who had called this place home for generations. The buildings, both low and high, seemed to grow organically from the jungle floor, their foundations rooted in the earth as if they were trees themselves. Vines and moss crept up the walls, blurring the lines between the wild and the civilized.
+
+> The streets of Old Pinemont were narrow and winding, their cobblestones worn smooth by centuries of footfall. Beneath the verdant canopy of interwoven branches, the sunlight filtering through painted the city in dappled shades of green and gold. It was not uncommon for an explorer to lose their way within the city's labyrinthine lanes, only to stumble upon a hidden gem: a secluded courtyard, a serene pond, or a forgotten shrine dedicated to the spirits of the jungle.
 
 ![](/places/Pinemont_1.png)
 
