fix: add link to king in recap

--- a/src/pages/journal/session-3.mdx
+++ b/src/pages/journal/session-3.mdx
@@ -18,7 +18,7 @@ Following the instructions, the party made their way back to the mist pass where
 
 He led them to a hidden doorway deep in the mists, revealing an enormous hidden castle, prompting surprise from the party--how did this enormous castle hide in Old Pinemont right beneath everyone's noses? Anyway... 
 
-Inside the castle the party was met by Ligzar and 6 other goblin companions, as well as a 9 foot tall skeletal goblin figure that they referred to as "King". King was clearly dead and only interested in speaking in guttural nonsense. Despite the lacking of royal nomenclature, Ligzar appeared to be in charge. 
+Inside the castle the party was met by Ligzar and 6 other goblin companions, as well as a 9 foot tall skeletal goblin figure that they referred to as ["King"](/characters/legion-of-death#king). King was clearly dead and only interested in speaking in guttural nonsense. Despite the lacking of royal nomenclature, Ligzar appeared to be in charge. 
 
 Ligzar, after searching through his "prophetic codex", a journal that describes in detail what to do in the event of Jergal's death, informs the party that their coming signifies that the death curse is in danger of misuse. The ritual to control the curse takes 20 days, and given their arrival time and Syndra's worsening condition he estimates they have 13 days to find the Soulcatcher and end the ritual. 
 
