feat: session 5 info

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -14,6 +14,7 @@
 
 ## Sessions
 
+- **5** / 5.8.2023 7:30PM EST
 - **4** / 4.23.2023 7:30PM EST
 - **3** ?? ?? ???
 - **2** / 11.30.2022 7:30PM EST
